--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,29 @@
     </a>
 </div>
 
+<div class="mobile-page-title">Contact</div>
+
+     <!-- Sidebar Toggle Button -->
+     <div class="sidebar-toggle">☰</div>
+
+     <!-- Sidebar Menu -->
+     <div class="sidebar">
+         <div class="sidebar-content">
+             <div class="sidebar-item"><a href="index.html">Home</a></div>
+             <div class="sidebar-item"><a href="experience.html">Experience</a></div>
+             <div class="sidebar-item"><a href="product.html">Product</a></div>
+             <div class="sidebar-item"><a href="spotlight.html">Spotlight</a></div>
+             <div class="sidebar-item"><a href="contact.html">Contact</a></div>
+         </div>
+     </div>
+ 
+     <script src="script.js"></script> <!-- Link to your JavaScript file -->
+
+
+
+
+
+    
 </body>
 </html>
 
