--- a/product.html
+++ b/product.html
@@ -23,5 +23,35 @@
         <div class="menu-item"><a href="contact.html">Contact</a></div>
     </div>
 
+
+
+
+<div class="mobile-page-title">Products</div>
+
+<!-- Sidebar Toggle Button -->
+<div class="sidebar-toggle">☰</div>
+
+<!-- Sidebar Menu -->
+<div class="sidebar">
+    <div class="sidebar-content">
+        <div class="sidebar-item"><a href="index.html">Home</a></div>
+        <div class="sidebar-item"><a href="experience.html">Experience</a></div>
+        <div class="sidebar-item"><a href="product.html">Product</a></div>
+        <div class="sidebar-item"><a href="spotlight.html">Spotlight</a></div>
+        <div class="sidebar-item"><a href="contact.html">Contact</a></div>
+    </div>
+</div>
+
+<script src="script.js"></script> <!-- Link to your JavaScript file -->
+
+
+
+
+
+
+
+
+
+    
 </body>
 </html>
