--- a/spotlight.html
+++ b/spotlight.html
@@ -9,6 +9,24 @@
 </head>
 <body class="spotlight-body">
 
+     <!-- Sidebar Toggle Button -->
+     <div class="sidebar-toggle">☰</div>
+
+     <!-- Sidebar Menu -->
+     <div class="sidebar">
+         <div class="sidebar-content">
+             <div class="sidebar-item"><a href="index.html">Home</a></div>
+             <div class="sidebar-item"><a href="experience.html">Experience</a></div>
+             <div class="sidebar-item"><a href="product.html">Product</a></div>
+             <div class="sidebar-item"><a href="spotlight.html">Spotlight</a></div>
+             <div class="sidebar-item"><a href="contact.html">Contact</a></div>
+         </div>
+     </div>
+ 
+     <script src="script.js"></script> <!-- Link to your JavaScript file -->
+
+
+     <div class="mobile-page-title">Spotlight</div>
     <!-- MENU -->
     <div class="menu">
         <div class="menu-item"><a href="index.html">Home</a></div>
