--- a/experience.html
+++ b/experience.html
@@ -25,8 +25,8 @@
     </div>
 
 
-    <div class="mobile-page-title">Experiences</div>
-
+<!--     <div class="mobile-page-title">Experiences</div>
+ -->
     
      <!-- Sidebar Toggle Button -->
      <div class="sidebar-toggle">☰</div>
