--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
 
 
- <div class="mobile-page-title">Home</div>
-
+<!--  <div class="mobile-page-title">Home</div>
+ -->
     <!-- Sidebar Toggle Button -->
     <div class="sidebar-toggle">☰</div>
 
