--- a/spotlight.html
+++ b/spotlight.html
@@ -26,8 +26,8 @@
      <script src="script.js"></script> <!-- Link to your JavaScript file -->
 
 
-<!--      <div class="mobile-page-title">Spotlight</div>
-    <!-- MENU --> -->
+     <div class="mobile-page-title">Spotlight</div>
+    <!-- MENU -->
     <div class="menu">
         <div class="menu-item"><a href="index.html">Home</a></div>
         <div class="menu-item"><a href="experience.html">Experience</a></div>
