--- a/product.html
+++ b/product.html
@@ -26,8 +26,8 @@
 
 
 
-<!-- <div class="mobile-page-title">Products</div>
- -->
+<div class="mobile-page-title">Products</div>
+
 <!-- Sidebar Toggle Button -->
 <div class="sidebar-toggle">☰</div>
 
