--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,8 @@
     </a>
 </div>
 
-<!-- <div class="mobile-page-title">Contact</div>
- -->
+<div class="mobile-page-title">Contact</div>
+
      <!-- Sidebar Toggle Button -->
      <div class="sidebar-toggle">☰</div>
 
