--- a/spotlight.html
+++ b/spotlight.html
@@ -9,32 +9,30 @@
 </head>
 <body class="spotlight-body">
 
-     <!-- Sidebar Toggle Button -->
-     <div class="sidebar-toggle">☰</div>
-
-     <!-- Sidebar Menu -->
-     <div class="sidebar">
-         <div class="sidebar-content">
-             <div class="sidebar-item"><a href="index.html">Home</a></div>
-             <div class="sidebar-item"><a href="experience.html">Experience</a></div>
-             <div class="sidebar-item"><a href="product.html">Product</a></div>
-             <div class="sidebar-item"><a href="spotlight.html">Spotlight</a></div>
-             <div class="sidebar-item"><a href="contact.html">Contact</a></div>
-         </div>
-     </div>
- 
-     <script src="script.js"></script> <!-- Link to your JavaScript file -->
 
 
-<!--      <div class="mobile-page-title">Spotlight</div>
-    <!-- MENU --> -->
-    <div class="menu">
-        <div class="menu-item"><a href="index.html">Home</a></div>
-        <div class="menu-item"><a href="experience.html">Experience</a></div>
-        <div class="menu-item"><a href="product.html">Product</a></div>
-        <div class="menu-item"><a href="spotlight.html">Spotlight</a></div>
-        <div class="menu-item"><a href="contact.html">Contact</a></div>
+<!-- Toggle Button -->
+<button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
+
+<!-- Mobile Page Title -->
+<!-- <div class="mobile-page-title">Page Title</div> -->
+
+<!-- Sidebar -->
+<div class="sidebar">
+    <div class="sidebar-content">
+        <div class="sidebar-item"><a href="index.html">HOME</a></div>
+        <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
+        <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
+        <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
+        <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
+
     </div>
+</div>
+<script src="script.js"></script> <!-- Link to your JavaScript file -->
+
+
+
+
 
     <!-- BLOG POSTS SECTION -->
     <section class="blog-container">
