--- a/product.html
+++ b/product.html
@@ -14,44 +14,27 @@
         <p class="product-description">STAY TUNED! Exciting products are on their way!</p>
     </div>
 
-    <!-- MENU -->
-    <div class="menu">
-        <div class="menu-item"><a href="index.html">Home</a></div>
-        <div class="menu-item"><a href="experience.html">Experience</a></div>
-        <div class="menu-item"><a href="product.html">Product</a></div>
-        <div class="menu-item"><a href="spotlight.html">Spotlight</a></div>
-        <div class="menu-item"><a href="contact.html">Contact</a></div>
-    </div>
+   
 
+<!-- Toggle Button -->
+<button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
 
+<!-- Mobile Page Title -->
+<!-- <div class="mobile-page-title">Page Title</div> -->
 
-
-<!-- <div class="mobile-page-title">Products</div>
- -->
-<!-- Sidebar Toggle Button -->
-<div class="sidebar-toggle">☰</div>
-
-<!-- Sidebar Menu -->
+<!-- Sidebar -->
 <div class="sidebar">
     <div class="sidebar-content">
-        <div class="sidebar-item"><a href="index.html">Home</a></div>
-        <div class="sidebar-item"><a href="experience.html">Experience</a></div>
-        <div class="sidebar-item"><a href="product.html">Product</a></div>
-        <div class="sidebar-item"><a href="spotlight.html">Spotlight</a></div>
-        <div class="sidebar-item"><a href="contact.html">Contact</a></div>
+        <div class="sidebar-item"><a href="index.html">HOME</a></div>
+        <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
+        <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
+        <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
+        <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
+
     </div>
 </div>
-
 <script src="script.js"></script> <!-- Link to your JavaScript file -->
 
 
-
-
-
-
-
-
-
-    
 </body>
 </html>
