--- a/index.html
+++ b/index.html
@@ -11,19 +11,42 @@
 </head>
 <body class="index-body">
 <!-- VISION CONTENT  -->
+<div class="vision-container">
     <div class="vision-container">
         <p>Cycle Culture aims to advance the culture of cycling, fostering an active lifestyle and positioning the country as a global destination for cycle tourism. <br>#LetsTakeARideToday </p>
         <!-- <p class="tagline" > #LetsTakeARideToday</p> -->
     </div>
+</div>
+
+
+<!-- Toggle Button -->
+<button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
+
+<!-- Mobile Page Title -->
+<!-- <div class="mobile-page-title">Page Title</div> -->
+
+<!-- Sidebar -->
+<div class="sidebar">
+    <div class="sidebar-content">
+        <div class="sidebar-item"><a href="index.html">HOME</a></div>
+        <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
+        <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
+        <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
+        <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
+
+    </div>
+</div>
+<script src="script.js"></script> <!-- Link to your JavaScript file -->
+
 <!-- MENU  -->
 
-    <div class="menu">
-        <div class="menu-item"><a href="#home">Home</a></div>
+    <!-- <div class="menu">
+        <div class="menu-item"><a href="index.html">Home</a></div>
         <div class="menu-item"><a href="experience.html">Experience</a></div>
-        <div class="menu-item"><a href="#product.html">Product</a></div>
+        <div class="menu-item"><a href="product.html">Product</a></div>
         <div class="menu-item"><a href="spotlight.html">Spotlight</a></div>
         <div class="menu-item"><a href="contact.html">Contact</a></div>
-    </div>    
+    </div>     -->
     
 
     <div class="homepage-social-icons">
@@ -39,6 +62,8 @@
     </div>
 
 
+
+
 <!-- FOOTER -->
 <footer>
     <div class="footer">
@@ -46,30 +71,6 @@
     </div>
     
 </footer>
-
-
-
-<!--  <div class="mobile-page-title">Home</div>
- -->
-    <!-- Sidebar Toggle Button -->
-    <div class="sidebar-toggle">☰</div>
-
-    <!-- Sidebar Menu -->
-    <div class="sidebar">
-        <div class="sidebar-content">
-            <div class="sidebar-item"><a href="index.html">Home</a></div>
-            <div class="sidebar-item"><a href="experience.html">Experience</a></div>
-            <div class="sidebar-item"><a href="product.html">Product</a></div>
-            <div class="sidebar-item"><a href="spotlight.html">Spotlight</a></div>
-            <div class="sidebar-item"><a href="contact.html">Contact</a></div>
-        </div>
-    </div>
-
-    <script src="script.js"></script> <!-- Link to your JavaScript file -->
-
-
-
-
 
 </body>
 </html>
