--- a/contact.html
+++ b/contact.html
@@ -25,18 +25,6 @@
 
 
 
-    
-<!-- MENU  -->
-
-<div class="menu">
-    <div class="menu-item"><a href="index.html">Home</a></div>
-    <div class="menu-item"><a href="experience.html">Experience</a></div>
-    <div class="menu-item"><a href="product.html">Product</a></div>
-    <div class="menu-item"><a href="spotlight.html">Spotlight</a></div>
-    <div class="menu-item"><a href="contact.html">Contact</a></div>
-</div>    
-
-
 
 <div class="contact-page-social-icons">
     <a href="https://www.instagram.com/itscycleculture/" target="_blank" class="contact-page-social-icon">
@@ -50,29 +38,29 @@
     </a>
 </div>
 
-<!-- <div class="mobile-page-title">Contact</div>
- -->
-     <!-- Sidebar Toggle Button -->
-     <div class="sidebar-toggle">☰</div>
-
-     <!-- Sidebar Menu -->
-     <div class="sidebar">
-         <div class="sidebar-content">
-             <div class="sidebar-item"><a href="index.html">Home</a></div>
-             <div class="sidebar-item"><a href="experience.html">Experience</a></div>
-             <div class="sidebar-item"><a href="product.html">Product</a></div>
-             <div class="sidebar-item"><a href="spotlight.html">Spotlight</a></div>
-             <div class="sidebar-item"><a href="contact.html">Contact</a></div>
-         </div>
-     </div>
- 
-     <script src="script.js"></script> <!-- Link to your JavaScript file -->
 
 
+<!-- Toggle Button -->
+<button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
+
+<!-- Mobile Page Title -->
+<!-- <div class="mobile-page-title">Page Title</div> -->
+
+<!-- Sidebar -->
+<div class="sidebar">
+    <div class="sidebar-content">
+        <div class="sidebar-item"><a href="index.html">HOME</a></div>
+        <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
+        <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
+        <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
+        <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
+
+    </div>
+</div>
+<script src="script.js"></script> <!-- Link to your JavaScript file -->
 
 
 
-    
 </body>
 </html>
 
