--- a/experience.html
+++ b/experience.html
@@ -16,11 +16,11 @@
 
 
 
+</div>
+
+
 <!-- Toggle Button -->
 <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
-
-<!-- Mobile Page Title -->
-<!-- <div class="mobile-page-title">Page Title</div> -->
 
 <!-- Sidebar -->
 <div class="sidebar">
@@ -30,9 +30,9 @@
         <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
         <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
         <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
-
     </div>
 </div>
+    
 <script src="script.js"></script> <!-- Link to your JavaScript file -->
 
 </body>
