--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <body class="contact-body">
     <div class="contact-container">
         <p>You can write to us here!</p>
-        <form class="contact-form" id="contactForm" action="https://formspree.io/f/{your-form-id}" method="POST">
+        <form class="contact-form" id="contactForm" action="https://formspree.io/f/myzgvenk" method="POST">
             <label for="contact">Email or Number</label>
             <input type="text" id="contact" name="contact" placeholder="Your email or phone number" required>
 
