--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="vision-container">
         <h1 class="vision-heading">CYCLE CULTURE</h1>
         <p class="vision-text">
-            aims to advance the culture of cycling, fostering an active lifestyle 
-            <span class="line-break"><br></span> 
+            aims to advance the culture of cycling. 
+<!--             <span class="line-break"><br></span> 
             and positioning the country as a global destination for cycle tourism.
-        </p>
+        </p> -->
         <!-- <p class="vision-subheading">#LetsTakeARideToday</p> -->
     </div>
     
