--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="vision-container">
         <h1 class="vision-heading">CYCLE CULTURE</h1>
         <p class="vision-text">
-            aims to advance the culture of cycling. 
+            aims to advance the CULTURE OF CYCLING. 
 <!--             <span class="line-break"><br></span> 
             and positioning the country as a global destination for cycle tourism.
         </p> -->
