--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 </div>
 
 <!-- FOOTER -->
-<footer>
+<!-- <footer>
     <div class="footer">
         <span>&copy; 2024 Cycle Culture.</span>
     </div>
-</footer>
+</footer> -->
 
 <script src="script.js"></script>
 </body>
