--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <div class="overlay"></div>
     <div class="vision-container">
         <h1 class="vision-heading">CYCLE CULTURE</h1>
-<!--         <p class="vision-text">
-            aims to advance the CULTURE OF CYCLING.  -->
+        <p class="vision-text">
+            #LetsTakeARideToday
+        </p>
 <!--             <span class="line-break"><br></span> 
             and positioning the country as a global destination for cycle tourism.
-        </p> -->
+       
         <!-- <p class="vision-subheading">#LetsTakeARideToday</p> -->
     </div>
     
