--- a/spotlight.html
+++ b/spotlight.html
@@ -39,13 +39,13 @@
         <!-- 50 blog posts -->
         <article class="blog-post">
             <img src="1.jpg" alt="Blog Image">
-            <p>Cycle Culture in India – From Inception to Present Day Scenario</p>
+            <p>Cycle Culture in India – From inception to present day scenario</p>
             <a href="blog1.html" class="read-more">Read More</a>
         </article>
 
         <article class="blog-post">
             <img src="2.jpg" alt="Blog Image">
-            <p>The Evolution of the Bicycle: From Inception to Modern-Day Innovations</p>
+            <p>Is 10km cycling every day the Golden Distance?</p>
             <a href="blog2.html" class="read-more">Read More</a>
         </article>
 
