--- a/spotlight.html
+++ b/spotlight.html
@@ -38,7 +38,7 @@
     <section class="blog-container">
         <!-- 50 blog posts -->
         <article class="blog-post">
-            <img src="1.jpg" alt="Blog Image">
+            <img src="blog1.jpg" alt="Blog Image">
             <p>Cycle Culture in India – From inception to present day scenario</p>
             <a href="blog1.html" class="read-more">Read More</a>
         </article>
