--- a/spotlight.html
+++ b/spotlight.html
@@ -44,7 +44,7 @@
         </article>
 
         <article class="blog-post">
-            <img src="2.jpg" alt="Blog Image">
+            <img src="blog2.jpg" alt="Blog Image">
             <p>Is 10km cycling every day the Golden Distance?</p>
             <a href="blog2.html" class="read-more">Read More</a>
         </article>
