--- a/blog1.html
+++ b/blog1.html
@@ -6,14 +6,14 @@
     <title>Blog Post Detail</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference&display=swap" rel="stylesheet">
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-M7S58JBT43"></script>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-M7S58JBT43');
+  gtag('config', 'G-56YGC2V2YG');
 </script>
 </head>
 <body class="postdetail-body">
