--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-M7S58JBT43"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-M7S58JBT43');
+  gtag('config', 'G-56YGC2V2YG');
 </script>
 </head>
 <body class="contact-body">
