--- a/blog1.html
+++ b/blog1.html
@@ -15,6 +15,7 @@
 
   gtag('config', 'G-56YGC2V2YG');
 </script>
+<title>Cycle Culture in India – From Inception to Present Day Scenarios</title>
 </head>
 <body class="postdetail-body">
 
