--- a/Is-10km-cycling-every-day-the-Golden-Distance?.html
+++ b/Is-10km-cycling-every-day-the-Golden-Distance?.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Post Detail</title>
+    <title>Is 10km cycling every day the Golden Distance?</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference&display=swap" rel="stylesheet">
     <!-- Google tag (gtag.js) -->
