--- a/spotlight.html
+++ b/spotlight.html
@@ -55,7 +55,7 @@
         <article class="blog-post">
             <img src="blog2.jpg" alt="Blog Image">
             <p>Is 10km cycling every day the Golden Distance?</p>
-            <a href="blog2.html" class="read-more">Read More</a>
+            <a href="Is-10km-cycling-every-day-the-Golden-Distance?.html" class="read-more">Read More</a>
         </article>
 
         <article class="blog-post">
