--- a/cycle-culture-in-india-from-inception-to-present-day-scenarios.html
+++ b/cycle-culture-in-india-from-inception-to-present-day-scenarios.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Explore the evolution of cycle culture in India, from its historical beginnings to the modern-day resurgence, highlighting its health, environmental benefits, and future prospects.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cycle Culture in India – From Inception to Present Day Scenarios</title>
     <link rel="stylesheet" href="style.css">
