--- a/cycle-culture-in-india-from-inception-to-present-day-scenarios.html
+++ b/cycle-culture-in-india-from-inception-to-present-day-scenarios.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Explore the evolution of cycle culture in India, from its historical beginnings to the modern-day resurgence, highlighting its health, environmental benefits, and future prospects.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cycle Culture in India – From Inception to Present Day Scenarios</title>
+    <link rel="canonical" href="https://www.cycleculture.in/cycle-culture-in-india-from-inception-to-present-day-scenarios">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference&display=swap" rel="stylesheet">
    <!-- Google tag (gtag.js) -->
