--- a/product.html
+++ b/product.html
@@ -6,6 +6,8 @@
     <title>Product Page - Coming Soon</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference&display=swap" rel="stylesheet">
+    <link rel="icon" href="/path-to-your-logo/favicon.ico" type="image/x-icon">
+
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
 <script>
