--- a/cycle-culture-in-india-from-inception-to-present-day-scenarios.html
+++ b/cycle-culture-in-india-from-inception-to-present-day-scenarios.html
@@ -35,6 +35,8 @@
     <link rel="canonical" href="https://www.cycleculture.in/cycle-culture-in-india-from-inception-to-present-day-scenarios">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference&display=swap" rel="stylesheet">
+    <link rel="icon" href="/path-to-your-logo/favicon.ico" type="image/x-icon">
+
    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
 <script>
