--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="/path-to-your-logo/favicon.ico" type="image/x-icon">
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Cycle Culture",
+  "url": "https://cycleculture.in",
+  "logo": "fabicon.ico",
+  "sameAs": [
+    "https://www.facebook.com/itscycleculture",
+    "https://twitter.com/itscycleculture",
+    "https://www.instagram.com/itscycleculture"
+  ],
+  "description": "Book the best cycle tours in India with Cycle Culture! Enjoy scenic rides, custom tours, and unforgettable cycling experiences on your next holiday. Adventure awaits!"
+}
+</script>
 
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
