--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     "https://twitter.com/itscycleculture",
     "https://www.instagram.com/itscycleculture"
   ],
-  "description": "Book the best cycle tours in India with Cycle Culture! Enjoy scenic rides, custom tours, and unforgettable cycling experiences on your next holiday. Adventure awaits!"
+  "description": "Let's Take A Ride Today!"
 }
 </script>
 
