--- a/index.html
+++ b/index.html
@@ -1,32 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Cycle Culture - India</title>
+    <img src="Cycle Culture Logo.jpg" alt="Cycle Culture Logo" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Book the best cycle tours in India with Cycle Culture! Enjoy scenic rides, custom tours, and unforgettable cycling experiences on your next holiday. Adventure awaits!">
-
-
-    <title>Cycle Culture - India</title>
+    <meta name="description" content="Book the best cycle tours in India with Cycle Culture! Enjoy scenic rides, custom tours, and unforgettable cycling experiences on your next holiday. Adventure awaits!" />
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="/path-to-your-logo/favicon.ico" type="image/x-icon">
-
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Organization",
-  "name": "Cycle Culture",
-  "url": "https://cycleculture.in",
-  "logo": "fabicon.ico",
-  "sameAs": [
-    "https://www.facebook.com/itscycleculture",
-    "https://twitter.com/itscycleculture",
-    "https://www.instagram.com/itscycleculture"
-  ],
-  "description": "Let's Take A Ride Today!"
-}
-</script>
 
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
