--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Cycle Culture - India</title>
+    <title>Cycle Culture</title>
     <img src="Cycle Culture Logo.jpg" alt="Cycle Culture Logo" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
