--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
     <title>Cycle Culture</title>
-    <img src="Cycle Culture Logo.jpg" alt="Cycle Culture Logo" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Book the best cycle tours in India with Cycle Culture! Enjoy scenic rides, custom tours, and unforgettable cycling experiences on your next holiday. Adventure awaits!" />
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" href="/path-to-your-logo/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="x-icon">
 
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
@@ -22,6 +21,8 @@
 </script>
 </head>
 <body class="index-body">
+<img src="Cycle Culture Logo.jpg" alt="Cycle Culture Logo" />
+
 
 <!-- VISION CONTENT  -->
 <div class="hero-section">
