--- a/index.html
+++ b/index.html
@@ -4,79 +4,61 @@
     <title>Cycle Culture</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Book the best cycle tours in India with Cycle Culture! Enjoy scenic rides, custom tours, and unforgettable cycling experiences on your next holiday. Adventure awaits!" />
+    <meta name="description" content="Book the best cycle tours in India with Cycle Culture! Enjoy scenic rides, custom tours, and unforgettable cycling experiences on your next holiday. Adventure awaits.">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="favicon.ico" type="x-icon">
 
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-56YGC2V2YG');
-</script>
+    <!-- Google Tag Manager -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-56YGC2V2YG');
+    </script>
 </head>
+
 <body class="index-body">
-<img src="CycleCultureLogo.jpg" alt="Cycle Culture Logo"/>
+    <img src="CycleCultureLogo.jpg" alt="Cycle Culture Logo">
 
-
-<!-- VISION CONTENT  -->
-<div class="hero-section">
-    <div class="overlay"></div>
-    <div class="vision-container">
-        <h1 class="vision-heading">CYCLE CULTURE</h1>
-        <p class="vision-text">
-            #LetsTakeARideToday
-        </p>
-<!--             <span class="line-break"><br></span> 
-            and positioning the country as a global destination for cycle tourism.
-       
-        <!-- <p class="vision-subheading">#LetsTakeARideToday</p> -->
+    <!-- VISION CONTENT -->
+    <div class="hero-section">
+        <div class="overlay"></div>
+        <div class="vision-container">
+            <h1 class="vision-heading">CYCLE CULTURE</h1>
+            <p class="vision-text">#LetsTakeARideToday</p>
+        </div>
     </div>
-    
-</div>
 
+    <!-- Toggle Button -->
+    <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
 
-<!-- Toggle Button -->
-<button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
-
-<!-- Sidebar -->
-<div class="sidebar">
-    <div class="sidebar-content">
-        <div class="sidebar-item"><a href="index.html">HOME</a></div>
-        <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
-        <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
-        <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
-        <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
+    <!-- Sidebar -->
+    <div class="sidebar">
+        <div class="sidebar-content">
+            <div class="sidebar-item"><a href="index.html">HOME</a></div>
+            <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
+            <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
+            <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
+            <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
+        </div>
     </div>
-</div>
 
-<!-- Social Icons -->
-
-
-<div class="contact-page-social-icons">
-    <a href="https://www.instagram.com/itscycleculture/" target="_blank" class="contact-page-social-icon">
-        <i class="fab fa-instagram"></i>
-    </a>
-    <a href="https://x.com/itscycleculture" target="_blank" class="contact-page-social-icon">
-        <i class="fab fa-twitter"></i>
-    </a>
-    <a href="https://www.linkedin.com/company/itscycleculture/" target="_blank" class="contact-page-social-icon">
-        <i class="fab fa-linkedin"></i>
-    </a>
-</div>
-
-<!-- FOOTER -->
-<!-- <footer>
-    <div class="footer">
-        <span>&copy; 2024 Cycle Culture.</span>
+    <!-- Social Icons -->
+    <div class="contact-page-social-icons">
+        <a href="https://www.instagram.com/itscycleculture/" target="_blank" class="contact-page-social-icon">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://x.com/itscycleculture" target="_blank" class="contact-page-social-icon">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://www.linkedin.com/company/itscycleculture/" target="_blank" class="contact-page-social-icon">
+            <i class="fab fa-linkedin"></i>
+        </a>
     </div>
-</footer> -->
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
