--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <div class="hero-section">
         <div class="overlay"></div>
         <div class="vision-container">
-            <h1 class="vision-heading">CYCLE CULTURE</h1>
+            <h1 class="vision-heading">Welcome to Cycle Culture, your gateway to cycling adventures across India!
+Whether you're a seasoned rider, a weekend explorer, or a vacationer eager to experience cycling, we’ve got the perfect ride for you.
+At Cycle Culture, our vision is to advance the culture of cycling and position India as a premier destination for cycle tourism.</h1>
             <p class="vision-text">#LetsTakeARideToday</p>
         </div>
     </div>
