--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <div class="vision-container">
             <h1 class="vision-heading">Welcome to Cycle Culture!</h1>
             <p class="vision-text">Your gateway to cycling adventures across India!
-Whether you're a seasoned rider, a weekend explorer, or a vacationer eager to experience cycling, we’ve got the perfect ride for you.
-<span class="line-break"><br></span> At Cycle Culture, our vision is to advance the culture of cycling and position India as a premier destination for cycle tourism.</p>
+Whether you're a seasoned rider, a weekend explorer, or a vacationer eager to experience cycling, we’ve got the perfect ride for you. At Cycle Culture, our vision is to advance the culture of cycling and position India as a premier destination for cycle tourism.</p>
         </div>
     </div>
 
