--- a/spotlight.html
+++ b/spotlight.html
@@ -62,8 +62,8 @@
 
         <article class="blog-post">
             <img src="3.jpg" alt="Blog Image">
-            <p>The Future of Cycling: Innovations, Challenges, and Opportunities</p>
-            <a href="blog3.html" class="read-more">Read More</a>
+            <p>The rise of weekend cycling in India: More than just a trend</p>
+            <a href="The-rise-of-weekend-cycling-in-India-more-than-just-a-trend.html" class="read-more">Read More</a>
         </article>
 
         <article class="blog-post">
