--- a/spotlight.html
+++ b/spotlight.html
@@ -68,8 +68,8 @@
 
         <article class="blog-post">
             <img src="4.jpg" alt="Blog Image">
-            <p>New Trends in Cycling: Embracing Innovation and Sustainability</p>
-            <a href="blog4.html" class="read-more">Read More</a>
+            <p>5 epic cycling destinations in India for November adventures</p>
+            <a href="5-epic-cycling-destinations-in-India-for-November-adventures.html" class="read-more">Read More</a>
         </article>
 
         <article class="blog-post">
