--- a/spotlight.html
+++ b/spotlight.html
@@ -61,7 +61,7 @@
         </article>
 
         <article class="blog-post">
-            <img src="3.jpg" alt="Blog Image">
+            <img src="3.jpg" alt="Weekend cycing in india">
             <p>The rise of weekend cycling in India: More than just a trend</p>
             <a href="The-rise-of-weekend-cycling-in-India-more-than-just-a-trend.html" class="read-more">Read More</a>
         </article>
