--- a/spotlight.html
+++ b/spotlight.html
@@ -74,9 +74,9 @@
         </article>
 
         <article class="blog-post">
-            <img src="5.jpg" alt="Blog Image">
+            <img src="20.jpg" alt="Blog Image">
             <p>Maximizing the Benefits of Cycling: A Comprehensive Guide</p>
-            <a href="blog5.html" class="read-more">Read More</a>
+            <a href="reasons-to-choose-an-electric-cycle.html" class="read-more">Read More</a>
         </article>
     <!-- PAGINATION -->
     <!-- <div class="pagination">
