--- a/spotlight.html
+++ b/spotlight.html
@@ -75,7 +75,7 @@
 
         <article class="blog-post">
             <img src="20.jpg" alt="Blog Image">
-            <p>Maximizing the Benefits of Cycling: A Comprehensive Guide</p>
+            <p>Reasons to Choose an Electric Cycle!</p>
             <a href="reasons-to-choose-an-electric-cycle.html" class="read-more">Read More</a>
         </article>
     <!-- PAGINATION -->
