--- a/spotlight.html
+++ b/spotlight.html
@@ -78,6 +78,11 @@
             <p>Reasons to choose an Electric Cycle!</p>
             <a href="reasons-to-choose-an-electric-cycle.html" class="read-more">Read More</a>
         </article>
+        <article class="blog-post">
+            <img src="21.jpg" alt="Blog Image">
+            <p>Reasons to choose an Electric Cycle!</p>
+            <a href="explore-the-best-types-of-electric-cycles-available-in-India-today.html" class="read-more">Read More</a>
+        </article>
     <!-- PAGINATION -->
     <!-- <div class="pagination">
         <a href="#" class="prev">« Prev</a>
