--- a/spotlight.html
+++ b/spotlight.html
@@ -80,7 +80,7 @@
         </article>
         <article class="blog-post">
             <img src="21.jpg" alt="Blog Image">
-            <p>Reasons to choose an Electric Cycle!</p>
+            <p>Explore the best types of Electric Cycles available in India today</p>
             <a href="explore-the-best-types-of-electric-cycles-available-in-India-today.html" class="read-more">Read More</a>
         </article>
     <!-- PAGINATION -->
