--- a/spotlight.html
+++ b/spotlight.html
@@ -83,6 +83,11 @@
             <p>Explore the best types of Electric Cycles available in India today</p>
             <a href="explore-the-best-types-of-electric-cycles-available-in-India-today.html" class="read-more">Read More</a>
         </article>
+         <article class="blog-post">
+            <img src="22.jpg" alt="Blog Image">
+            <p>Choosing the perfect electric cycle</p>
+            <a href="choosing-the-perfect-electric-cycle.html" class="read-more">Read More</a>
+        </article>
     <!-- PAGINATION -->
     <!-- <div class="pagination">
         <a href="#" class="prev">« Prev</a>
