--- a/cycle-culture-in-india-from-inception-to-present-day-scenarios.html
+++ b/cycle-culture-in-india-from-inception-to-present-day-scenarios.html
@@ -4,39 +4,13 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5015973451404959" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="description" content="Explore the evolution of cycle culture in India, from its historical beginnings to the modern-day resurgence, highlighting its health, environmental benefits, and future prospects.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "BlogPosting",
-  "headline": "Cycle Culture in India – From Inception to Present Day Scenarios",
-  "image": "https://www.cycleculture.in/blog1.jpg",  // Ensure this URL points to the correct image
-  "author": {
-    "@type": "Person",
-    "name": "Cycle Culture"  // Replace with the actual author's name
-  },
-  "publisher": {
-    "@type": "Organization",
-    "name": "Cycle Culture",
-    "logo": {
-      "@type": "ImageObject",
-      "url": "https://www.cycleculture.in/logo.png"  // Replace with the actual logo URL
-    }
-  },
-  "datePublished": "2024-08-21",
-  "description": "Explore the evolution of cycle culture in India, from its historical beginnings to the modern-day resurgence, highlighting its health, environmental benefits, and future prospects.",
-  "mainEntityOfPage": {
-    "@type": "WebPage",
-    "@id": "https://www.cycleculture.in/cycle-culture-in-india-from-inception-to-present-day-scenarios"
-  }
-}
-</script>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Cycle Culture in India – From Inception to Present Day Scenarios</title>
     <link rel="canonical" href="https://www.cycleculture.in/cycle-culture-in-india-from-inception-to-present-day-scenarios">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference&display=swap" rel="stylesheet">
-    <link rel="icon" href="/path-to-your-logo/favicon.ico" type="image/x-icon">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="favicon.ico" type="icon">
 
    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
