--- a/spotlight.html
+++ b/spotlight.html
@@ -88,6 +88,11 @@
             <p>Choosing the perfect electric cycle</p>
             <a href="choosing-the-perfect-electric-cycle.html" class="read-more">Read More</a>
         </article>
+          <article class="blog-post">
+            <img src="29.jpg" alt="Blog Image">
+            <p>Choosing the perfect electric cycle</p>
+            <a href="how-dedicated-cycling-lanes-could-change-the-game.html" class="read-more">Read More</a>
+        </article>
     <!-- PAGINATION -->
     <!-- <div class="pagination">
         <a href="#" class="prev">« Prev</a>
