--- a/spotlight.html
+++ b/spotlight.html
@@ -90,7 +90,7 @@
         </article>
           <article class="blog-post">
             <img src="29.jpg" alt="Blog Image">
-            <p>Choosing the perfect electric cycle</p>
+            <p>How dedicated cycling lanes could change the game</p>
             <a href="how-dedicated-cycling-lanes-could-change-the-game.html" class="read-more">Read More</a>
         </article>
     <!-- PAGINATION -->
