--- a/spotlight.html
+++ b/spotlight.html
@@ -93,6 +93,12 @@
             <p>How dedicated cycling lanes could change the game</p>
             <a href="how-dedicated-cycling-lanes-could-change-the-game.html" class="read-more">Read More</a>
         </article>
+        </article>
+          <article class="blog-post">
+            <img src="30.jpg" alt="Blog Image">
+            <p>How dedicated cycling lanes could change the game</p>
+            <a href="electric-cycles-in-india-price-range-guide.html" class="read-more">Read More</a>
+        </article>
     <!-- PAGINATION -->
     <!-- <div class="pagination">
         <a href="#" class="prev">« Prev</a>
