--- a/spotlight.html
+++ b/spotlight.html
@@ -96,7 +96,7 @@
         </article>
           <article class="blog-post">
             <img src="30.jpg" alt="Blog Image">
-            <p>How dedicated cycling lanes could change the game</p>
+            <p>Electric cycles in India: Price range guide</p>
             <a href="electric-cycles-in-india-price-range-guide.html" class="read-more">Read More</a>
         </article>
     <!-- PAGINATION -->
