--- a/spotlight.html
+++ b/spotlight.html
@@ -99,6 +99,12 @@
             <p>Electric cycles in India: Price range guide</p>
             <a href="electric-cycles-in-india-price-range-guide.html" class="read-more">Read More</a>
         </article>
+         </article>
+          <article class="blog-post">
+            <img src="10.jpg" alt="Blog Image">
+            <p>Delhi’s Smog: Cycling through visible and invisible impacts</p>
+            <a href="delhi’s-smog-cycling-through-visible-and-invisible-impacts.html" class="read-more">Read More</a>
+        </article>
     <!-- PAGINATION -->
     <!-- <div class="pagination">
         <a href="#" class="prev">« Prev</a>
