--- a/index.html
+++ b/index.html
@@ -22,29 +22,35 @@
 </head>
 
 <body class="index-body">
-    <!-- VISION CONTENT -->
-    <div class="hero-section">
-        <div class="overlay"></div>
-        <div class="vision-container">
-<!--             <h1 class="vsion-heading">Welcome to Cycle Culture!</h1> -->
-<!--             <p class="vsion-text">Your gateway to cycling adventures across India!
-Whether you're a seasoned rider, a weekend explorer, or a vacationer eager to experience cycling, we’ve got the perfect ride for you. At Cycle Culture, our vision is to advance the culture of cycling and position India as a premier destination for cycle tourism.</p>
-        </div> -->
+    <!-- Top Navigation Bar for Desktop -->
+    <div class="desktop-nav">
+        <div class="nav-links">
+            <a href="index.html">HOME</a>
+            <a href="experience.html">EXPERIENCE</a>
+            <a href="product.html">PRODUCT</a>
+            <a href="spotlight.html">SPOTLIGHT</a>
+            <a href="community.html">CLUB</a>
+            <a href="contact.html">CONTACT</a>
+
+        </div>
     </div>
 
-    <!-- Toggle Button -->
-    <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
-
-    <!-- Sidebar -->
+    <!-- Mobile Sidebar -->
+    <button class="sidebar-toggle">☰</button>
     <div class="sidebar">
         <div class="sidebar-content">
-            <div class="sidebar-item"><a href="index.html">HOME</a></div>
+            <div class="sidebar-item"><a href="home.html">HOME</a></div>
             <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
             <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
             <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
+            <div class="sidebar-item"><a href="community.html">CLUB</a></div>
             <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
+
         </div>
     </div>
+</body>
+
+
 
     <!-- Social Icons -->
     <div class="contact-page-social-icons">
