--- a/spotlight.html
+++ b/spotlight.html
@@ -30,12 +30,27 @@
 <!-- <div class="mobile-page-title">Page Title</div> -->
 
 <!-- Sidebar -->
+<div class="desktop-nav">
+    <div class="nav-links">
+        <a href="index.html">HOME</a>
+        <a href="experience.html">EXPERIENCE</a>
+        <a href="product.html">PRODUCT</a>
+        <a href="spotlight.html">SPOTLIGHT</a>
+        <a href="community.html">CLUB</a>
+        <a href="contact.html">CONTACT</a>
+
+    </div>
+</div>
+
+<!-- Mobile Sidebar -->
+<button class="sidebar-toggle">☰</button>
 <div class="sidebar">
     <div class="sidebar-content">
-        <div class="sidebar-item"><a href="index.html">HOME</a></div>
+        <div class="sidebar-item"><a href="home.html">HOME</a></div>
         <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
         <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
         <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
+        <div class="sidebar-item"><a href="community.html">CLUB</a></div>
         <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
 
     </div>
@@ -98,12 +113,6 @@
             <img src="09.jpg" alt="Blog Image">
             <p>Electric cycles in India: Price range guide</p>
             <a href="electric-cycles-in-india-price-range-guide.html" class="read-more">Read More</a>
-        </article>
-         </article>
-          <article class="blog-post">
-            <img src="10.jpg" alt="Blog Image">
-            <p>Delhi’s Smog: Cycling through visible and invisible impacts</p>
-            <a href="delhi’s-smog-cycling-through-visible-and-invisible-impacts.html" class="read-more">Read More</a>
         </article>
     <!-- PAGINATION -->
     <!-- <div class="pagination">
