--- a/experience.html
+++ b/experience.html
@@ -35,17 +35,31 @@
 <!-- Toggle Button -->
 <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
 
-<!-- Sidebar -->
+<div class="desktop-nav">
+    <div class="nav-links">
+        <a href="index.html">HOME</a>
+        <a href="experience.html">EXPERIENCE</a>
+        <a href="product.html">PRODUCT</a>
+        <a href="spotlight.html">SPOTLIGHT</a>
+        <a href="community.html">CLUB</a>
+        <a href="contact.html">CONTACT</a>
+
+    </div>
+</div>
+
+<!-- Mobile Sidebar -->
+<button class="sidebar-toggle">☰</button>
 <div class="sidebar">
     <div class="sidebar-content">
-        <div class="sidebar-item"><a href="index.html">HOME</a></div>
+        <div class="sidebar-item"><a href="home.html">HOME</a></div>
         <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
         <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
         <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
+        <div class="sidebar-item"><a href="community.html">CLUB</a></div>
         <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
+
     </div>
 </div>
-    
 <script src="script.js"></script> <!-- Link to your JavaScript file -->
 
 </body>
