--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
         <p id="formResponse" style="display:none;"></p>
     </div>
     
-    <script src="path/to/your/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 
@@ -62,12 +62,27 @@
 <!-- <div class="mobile-page-title">Page Title</div> -->
 
 <!-- Sidebar -->
+<div class="desktop-nav">
+    <div class="nav-links">
+        <a href="index.html">HOME</a>
+        <a href="experience.html">EXPERIENCE</a>
+        <a href="product.html">PRODUCT</a>
+        <a href="spotlight.html">SPOTLIGHT</a>
+        <a href="community.html">CLUB</a>
+        <a href="contact.html">CONTACT</a>
+
+    </div>
+</div>
+
+<!-- Mobile Sidebar -->
+<button class="sidebar-toggle">☰</button>
 <div class="sidebar">
     <div class="sidebar-content">
-        <div class="sidebar-item"><a href="index.html">HOME</a></div>
+        <div class="sidebar-item"><a href="home.html">HOME</a></div>
         <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
         <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
         <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
+        <div class="sidebar-item"><a href="community.html">CLUB</a></div>
         <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
 
     </div>
