--- a/community.html
+++ b/community.html
@@ -58,9 +58,7 @@
     <!-- City Selector -->
 <div class="city-list">
     <div class="city-btn active" data-city="all">All Cities</div>
-    <div class="city-btn" data-city="delhi">Delhi</div>
-    <div class="city-btn" data-city="gurgaon">Gurgaon</div>
-    <div class="city-btn" data-city="mumbai">Mumbai</div>
+    <div class="city-btn" data-city="bengaluru">Bengaluru</div>
 </div>
 
 
@@ -70,35 +68,22 @@
 
 <!-- Community Cards -->
 <section class="community-container">
-    <!-- Delhi Club Card -->
-    <article class="community-card" data-city="delhi">
+    <!-- Bengaluru Club Card -->
+    <article class="community-card" data-city="bengaluru">
         <div class="community-thumbnail">
             <img src="community1.jpg" alt="Community Image">
         </div>
         <div class="community-content">
-            <p class="community-name"><strong>Club:</strong> Delhi Daredevils</p>
-            <p><strong>Group Size:</strong> 25 Members</p>
-            <p><strong>Location:</strong> Delhi</p>
-            <p><strong>Upcoming Ride:</strong> 25th Dec</p>
-            <p><strong>Activity:</strong> Casual rides, professional rides & occasional rides</p>
-            <a href="delhiclub.html" class="community-button">Meet the Club</a>
+            <p class="community-name"><strong>Club:</strong> Bengaluru Cycling Club </p>
+            <p><strong>Group Size:</strong> 700 Members</p>
+            <p><strong>Location:</strong> Multiple Places (Bengaluru)</p>
+            <p><strong>Upcoming Ride:</strong> Feb/Mar</p>
+            <p><strong>Activity:</strong> Organise group rides, Weekend fun rides, Fresher meet-up
+                rides, Endurance rides</p>
+            <a href="bengaluru.html" class="community-button">Meet the Club</a>
         </div>
     </article>
     
-    <!-- Mumbai Club Card -->
-    <article class="community-card" data-city="mumbai">
-        <div class="community-thumbnail">
-            <img src="community2.jpg" alt="Community Image">
-        </div>
-        <div class="community-content">
-            <p class="community-name"><strong>Club:</strong> Mumbai Riders</p>
-            <p><strong>Group Size:</strong> 25 Members</p>
-            <p><strong>Location:</strong> Mumbai</p>
-            <p><strong>Upcoming Ride:</strong> 25th Dec</p>
-            <p><strong>Activity:</strong> Casual rides, professional rides & occasional rides</p>
-            <a href="mumbai.html" class="community-button">Meet the Club</a>
-        </div>
-    </article>
 
     <!-- More cards as needed -->
 </section>
