--- a/index.html
+++ b/index.html
@@ -31,23 +31,24 @@
             <a href="spotlight.html">SPOTLIGHT</a>
             <a href="community.html">CLUB</a>
             <a href="contact.html">CONTACT</a>
-
         </div>
     </div>
 
+    <!-- Mobile Sidebar Toggle Button -->
+    <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
     <!-- Mobile Sidebar -->
-    <button class="sidebar-toggle">☰</button>
     <div class="sidebar">
         <div class="sidebar-content">
-            <div class="sidebar-item"><a href="home.html">HOME</a></div>
+            <div class="sidebar-item"><a href="index.html">HOME</a></div>
             <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
             <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
             <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
             <div class="sidebar-item"><a href="community.html">CLUB</a></div>
             <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
-
         </div>
     </div>
+</body>
+
 </body>
 
 
