--- a/experience.html
+++ b/experience.html
@@ -31,35 +31,34 @@
 
 </div>
 
-
-<!-- Toggle Button -->
-<button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
-
-<div class="desktop-nav">
-    <div class="nav-links">
-        <a href="index.html">HOME</a>
-        <a href="experience.html">EXPERIENCE</a>
-        <a href="product.html">PRODUCT</a>
-        <a href="spotlight.html">SPOTLIGHT</a>
-        <a href="community.html">CLUB</a>
-        <a href="contact.html">CONTACT</a>
-
+<body class="index-body">
+    <!-- Top Navigation Bar for Desktop -->
+    <div class="desktop-nav">
+        <div class="nav-links">
+            <a href="index.html">HOME</a>
+            <a href="experience.html">EXPERIENCE</a>
+            <a href="product.html">PRODUCT</a>
+            <a href="spotlight.html">SPOTLIGHT</a>
+            <a href="community.html">CLUB</a>
+            <a href="contact.html">CONTACT</a>
+        </div>
     </div>
-</div>
 
-<!-- Mobile Sidebar -->
-<button class="sidebar-toggle">☰</button>
-<div class="sidebar">
-    <div class="sidebar-content">
-        <div class="sidebar-item"><a href="home.html">HOME</a></div>
-        <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
-        <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
-        <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
-        <div class="sidebar-item"><a href="community.html">CLUB</a></div>
-        <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
-
+    <!-- Mobile Sidebar Toggle Button -->
+    <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
+    <!-- Mobile Sidebar -->
+    <div class="sidebar">
+        <div class="sidebar-content">
+            <div class="sidebar-item"><a href="index.html">HOME</a></div>
+            <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
+            <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
+            <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
+            <div class="sidebar-item"><a href="community.html">CLUB</a></div>
+            <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
+        </div>
     </div>
-</div>
+</body>
+
 <script src="script.js"></script> <!-- Link to your JavaScript file -->
 
 </body>
