--- a/index.html
+++ b/index.html
@@ -21,33 +21,32 @@
     </script>
 </head>
 
-<body class="index-body">
-    <!-- Top Navigation Bar for Desktop -->
-    <div class="desktop-nav">
-        <div class="nav-links">
-            <a href="index.html">HOME</a>
-            <a href="experience.html">EXPERIENCE</a>
-            <a href="product.html">PRODUCT</a>
-            <a href="spotlight.html">SPOTLIGHT</a>
-            <a href="community.html">CLUB</a>
-            <a href="contact.html">CONTACT</a>
-        </div>
-    </div>
 
-    <!-- Mobile Sidebar Toggle Button -->
-    <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
-    <!-- Mobile Sidebar -->
-    <div class="sidebar">
-        <div class="sidebar-content">
-            <div class="sidebar-item"><a href="index.html">HOME</a></div>
-            <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
-            <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
-            <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
-            <div class="sidebar-item"><a href="community.html">CLUB</a></div>
-            <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
-        </div>
+<div class="desktop-nav">
+    <div class="nav-links">
+        <a href="index.html">HOME</a>
+        <a href="experience.html">EXPERIENCE</a>
+        <a href="product.html">PRODUCT</a>
+        <a href="spotlight.html">SPOTLIGHT</a>
+        <a href="community.html">CLUB</a>
+        <a href="contact.html">CONTACT</a>
+
     </div>
-</body>
+</div>
+
+<!-- Mobile Sidebar -->
+<button class="sidebar-toggle">☰</button>
+<div class="sidebar">
+    <div class="sidebar-content">
+        <div class="sidebar-item"><a href="home.html">HOME</a></div>
+        <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
+        <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
+        <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
+        <div class="sidebar-item"><a href="community.html">CLUB</a></div>
+        <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
+
+    </div>
+</div>
 
 </body>
 
