--- a/product.html
+++ b/product.html
@@ -27,33 +27,32 @@
     </div>
 
    
-<body class="index-body">
-    <!-- Top Navigation Bar for Desktop -->
-    <div class="desktop-nav">
-        <div class="nav-links">
-            <a href="index.html">HOME</a>
-            <a href="experience.html">EXPERIENCE</a>
-            <a href="product.html">PRODUCT</a>
-            <a href="spotlight.html">SPOTLIGHT</a>
-            <a href="community.html">CLUB</a>
-            <a href="contact.html">CONTACT</a>
-        </div>
-    </div>
 
-    <!-- Mobile Sidebar Toggle Button -->
-    <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
-    <!-- Mobile Sidebar -->
-    <div class="sidebar">
-        <div class="sidebar-content">
-            <div class="sidebar-item"><a href="index.html">HOME</a></div>
-            <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
-            <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
-            <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
-            <div class="sidebar-item"><a href="community.html">CLUB</a></div>
-            <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
-        </div>
+<div class="desktop-nav">
+    <div class="nav-links">
+        <a href="index.html">HOME</a>
+        <a href="experience.html">EXPERIENCE</a>
+        <a href="product.html">PRODUCT</a>
+        <a href="spotlight.html">SPOTLIGHT</a>
+        <a href="community.html">CLUB</a>
+        <a href="contact.html">CONTACT</a>
+
     </div>
-</body>
+</div>
+
+<!-- Mobile Sidebar -->
+<button class="sidebar-toggle">☰</button>
+<div class="sidebar">
+    <div class="sidebar-content">
+        <div class="sidebar-item"><a href="home.html">HOME</a></div>
+        <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
+        <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
+        <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
+        <div class="sidebar-item"><a href="community.html">CLUB</a></div>
+        <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
+
+    </div>
+</div>
 
 <script src="script.js"></script> <!-- Link to your JavaScript file -->
 
