--- a/product.html
+++ b/product.html
@@ -55,6 +55,8 @@
 </div>
 
 <script src="script.js"></script> <!-- Link to your JavaScript file -->
+<script src="script.js"></script>
+
 
 
 </body>
