--- a/experience.html
+++ b/experience.html
@@ -59,6 +59,8 @@
 </div>
 
 <script src="script.js"></script> <!-- Link to your JavaScript file -->
+<script src="script.js"></script>
+
 
 </body>
 </html>
