--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,13 @@
 
 
 
+<!-- Toggle Button -->
+<button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
+
+<!-- Mobile Page Title -->
+<!-- <div class="mobile-page-title">Page Title</div> -->
+
+<!-- Sidebar -->
 <div class="desktop-nav">
     <div class="nav-links">
         <a href="index.html">HOME</a>
@@ -80,7 +87,6 @@
 
     </div>
 </div>
-
 <script src="script.js"></script> <!-- Link to your JavaScript file -->
 
 
