--- a/experience.html
+++ b/experience.html
@@ -32,6 +32,9 @@
 </div>
 
 
+<!-- Toggle Button -->
+<button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
+
 <div class="desktop-nav">
     <div class="nav-links">
         <a href="index.html">HOME</a>
@@ -57,10 +60,7 @@
 
     </div>
 </div>
-
 <script src="script.js"></script> <!-- Link to your JavaScript file -->
-<script src="script.js"></script>
-
 
 </body>
 </html>
