--- a/spotlight.html
+++ b/spotlight.html
@@ -23,6 +23,13 @@
 
 
 
+<!-- Toggle Button -->
+<button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
+
+<!-- Mobile Page Title -->
+<!-- <div class="mobile-page-title">Page Title</div> -->
+
+<!-- Sidebar -->
 <div class="desktop-nav">
     <div class="nav-links">
         <a href="index.html">HOME</a>
@@ -48,10 +55,7 @@
 
     </div>
 </div>
-
 <script src="script.js"></script> <!-- Link to your JavaScript file -->
-<script src="script.js"></script>
-
 
 
 
