--- a/community.html
+++ b/community.html
@@ -20,10 +20,8 @@
 </head>
 <body class="community-body">
 
-    <!-- Toggle Button -->
-    <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
-
-    <!-- Sidebar -->
+ <body class="index-body">
+    <!-- Top Navigation Bar for Desktop -->
     <div class="desktop-nav">
         <div class="nav-links">
             <a href="index.html">HOME</a>
@@ -49,7 +47,8 @@
 
         </div>
     </div>
-
+</body>
+    
 
 
 
