--- a/community.html
+++ b/community.html
@@ -84,7 +84,7 @@
     <!-- More cards as needed -->
 </section>
 
-<script src="cscript.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
