--- a/spotlight.html
+++ b/spotlight.html
@@ -40,7 +40,7 @@
     <button class="sidebar-toggle">☰</button>
     <div class="sidebar">
         <div class="sidebar-content">
-            <div class="sidebar-item"><a href="home.html">HOME</a></div>
+            <div class="sidebar-item"><a href="index.html">HOME</a></div>
             <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
             <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
             <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
