--- a/community.html
+++ b/community.html
@@ -83,8 +83,8 @@
 
     <!-- More cards as needed -->
 </section>
+<script src="scripts.js"></script>
 
-<script src="script.js"></script>
 
 </body>
 </html>
