--- a/community.html
+++ b/community.html
@@ -83,8 +83,8 @@
 
     <!-- More cards as needed -->
 </section>
-<script src="scripts.js"></script>
-
+ <script src="script1.js"></script>
+ <script src="script2.js"></script>
 
 </body>
 </html>
